Bug fix - Opening the side menu on mobile was showing a brief white screen on dark  theme is now fixed.

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.theme {
+  background-color: rgb(250, 250, 250);
+  transition: none;
+}
+
+.theme.active {
+  background-color: rgb(0, 0, 0);
+}
+
 #root {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -34,7 +43,6 @@ aside {
   color: rgb(250, 250, 250);
   background-color: rgb(0, 0, 0);
 }
-
 
 
 @media only screen and (max-width: 600px) {
